WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94683
[GTK] Preferred languages and spellchecker APIs are not consistent in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=94683
Summary
[GTK] Preferred languages and spellchecker APIs are not consistent in WebKit2
Carlos Garcia Campos
Reported
2012-08-22 02:07:20 PDT
API to get/set spellchecking languages, uses a string containing a list of languages separated by commas. We are splitting the list into a vector to update the enchant dictionaries, and building a comma separated string from enchant dictionaries to return the list of languages. On the other hand, set_preferred_languages receives a GList of string with the language identifiers. It would be more convenient to use a GStrv in both cases (we avoid unnecessary split/join in spellchecker case), and would result in a more consistent API.
Attachments
Patch
(20.78 KB, patch)
2012-08-22 02:15 PDT
,
Carlos Garcia Campos
alex
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-08-22 02:15:20 PDT
Created
attachment 159886
[details]
Patch This is an api break so it would be great to land it before the release.
WebKit Review Bot
Comment 2
2012-08-22 02:16:29 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Mario Sanchez Prada
Comment 3
2012-08-22 02:56:00 PDT
As the author of the previous version of this API, I must say I agree with this change and that the current patch looks good to me too
Alejandro G. Castro
Comment 4
2012-08-22 06:23:35 PDT
Comment on
attachment 159886
[details]
Patch LGTM!
Carlos Garcia Campos
Comment 5
2012-08-22 06:33:56 PDT
Committed
r126298
: <
http://trac.webkit.org/changeset/126298
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug