[GTK] Preferred languages and spellchecker APIs are not consistent in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=94683

Reviewed by Alejandro G. Castro.

Source/WebCore:

Use a Vector<String> instead of a comma-separated string to
get/set languages.

* platform/text/gtk/TextCheckerEnchant.cpp:
(TextCheckerEnchant::updateSpellCheckingLanguages):
(TextCheckerEnchant::getSpellCheckingLanguages):
* platform/text/gtk/TextCheckerEnchant.h:
(TextCheckerEnchant):

Source/WebKit/gtk:

* webkit/webkitspellcheckerenchant.cpp:
(updateSpellCheckingLanguages): Split the languages string to pass a
Vector to updateSpellCheckingLanguages().

Source/WebKit2:

Change spell-checker and preferred languages API to use a GStrv
instead of a comma-separated string and GList. This makes the API
more consistent and convenient to use.

* UIProcess/API/gtk/WebKitTextChecker.cpp:
(WebKitTextChecker::getSpellCheckingLanguages): Return a
Vector<String> instead of a String.
(WebKitTextChecker::setSpellCheckingLanguages): Receive a
Vector<String> instead of a String.
* UIProcess/API/gtk/WebKitTextChecker.h:
(WebKitTextChecker): Use a GPtrArray to cache languages.
* UIProcess/API/gtk/WebKitWebContext.cpp:
(webkit_web_context_get_spell_checking_languages):
(webkit_web_context_set_spell_checking_languages):
(webkit_web_context_set_preferred_languages):
* UIProcess/API/gtk/WebKitWebContext.h:
* UIProcess/API/gtk/tests/TestWebKitWebContext.cpp:
(testWebContextSpellChecker):
(testWebContextLanguages):

Canonical link: https://commits.webkit.org/112530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126298 268f45cc-cd09-0410-ab3c-d52691b4dbfc